fix logo title, text-wrap issue, by reducing marin space

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -128,6 +128,7 @@
   }
   .header__nav {
     justify-content: center;
+    margin-right: 5px;
   }
   .header__title {
     font-size: $label-big-font-size;
